SVTR-256 Add a tool to update goal weight
